rename PersonalToken to PersonalAccessToken